@@ -2,6 +2,10 @@ Version 1.5.1+svn:
  * campaigns:
  * language and i18n:
    * updated translations: Finnish, German, Greek, Lithuanian
+ * miscellaneous and bug fixes:
+   * rewrote the textbox history saving of the new widget library. This rewrite
+     is incompatible with the old version, but since the library is still in
+     development, no compatibility layer has been added.
 
 Version 1.5.1:
  * campaigns:
